--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.8.0",
+    "aws-amplify": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
