--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,7 +13,8 @@
     "@aws-amplify/auth": "^6.8.0",
     "aws-amplify": "^6.10.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
