--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "web:build": "pnpm run --filter web build",
     "web:dev": "pnpm run --filter web dev",
     "web:devw": "source setup-env.sh && pnpm run --filter web dev",
-    "cdk:deploy": "pnpm run --filter cdk cdk deploy --all"
+    "cdk:deploy": "source google-secrets.sh && pnpm run --filter cdk cdk deploy --all"
   },
   "packageManager": "pnpm@7.19.0",
   "engines": {
