--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@aws-amplify/auth": "^6.8.0",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.9",
     "aws-amplify": "^6.10.0",
     "oidc-client-ts": "^3.1.0",
     "react": "^18.3.1",
