--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -11,15 +11,21 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.146",
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "aws-cdk": "2.165.0",
+    "client-s3": "link:@types/@aws-sdk/client-s3",
+    "esbuild": "^0.24.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.165.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity": "^3.699.0",
+    "@aws-sdk/client-s3": "^3.701.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.699.0",
     "aws-cdk-lib": "2.165.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
