--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -5,10 +5,8 @@
     "cdk": "bin/cdk.js"
   },
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "local-server": "cd lambda/development && source ./set-env.sh && tsx watch serve.ts"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.146",
@@ -20,14 +18,18 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "~5.6.3"
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity": "^3.699.0",
     "@aws-sdk/client-s3": "^3.701.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.699.0",
+    "@hono/node-server": "^1.13.7",
     "aws-cdk-lib": "2.165.0",
+    "aws-jwt-verify": "^4.0.1",
     "constructs": "^10.0.0",
+    "hono": "^4.6.13",
     "source-map-support": "^0.5.21"
   }
 }
