--- a/packages/cdk/package.json
+++ b/packages/cdk/package.json
@@ -25,6 +25,10 @@
     "@aws-sdk/client-cognito-identity": "^3.699.0",
     "@aws-sdk/client-s3": "^3.701.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.699.0",
+    "@hono-storage/core": "^0.0.14",
+    "@hono-storage/memory": "^0.0.13",
+    "@hono-storage/node-disk": "^0.0.16",
+    "@hono-storage/s3": "^0.0.13",
     "@hono/node-server": "^1.13.7",
     "aws-cdk-lib": "2.165.0",
     "aws-jwt-verify": "^4.0.1",
