--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,7 +22,9 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "aws-amplify": "^6.10.0",
+    "aws-jwt-verify": "^4.0.1",
     "axios": "^1.7.8",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
